# Pig

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-to-testpypi.yml
pig/: __init__.py  __main__.py  app.py
pig/game/: __init__.py  ai_wrapper.py  base_classes.py  constants.py  dice.py  player.py  player_types.py
pig/train/: __init__.py  array_utils.py
