[metadata]
name = pig
version = attr: pig.__version__
description = The pig dice rolling game
long_description = file: README.md
author = Tang U-Liang
author_email = uliang6482@gmail.com
license = MIT 
classifiers = 
    License :: MIT License 
    Programming Language :: Python 3.8 

[options]
packages = find: 
install_requires = 
    numpy
    plac
    wasabi
    attrs

[options.entry_points] 
console_scripts =
    pig = pig:main

[options.package_data]
* = *.hdf5
