[metadata]
name = pig
version = attr: pig.__version__
description = The pig dice rolling game
long_description = file: README.md
long_description_content_type: text/markdown
author = Tang U-Liang
author_email = uliang6482@gmail.com
url = https://github.com/uliang/Pig
license = MIT 
classifiers = 
    Development Status :: 1 - Planning
    License :: Free For Educational Use 
    Programming Language :: Python :: 3.8
[options]
packages = find: 
install_requires = 
    numpy
    plac
    wasabi
    attrs

[options.entry_points] 
console_scripts =
    pig = pig:main

[options.package_data]
* = *.hdf5
